--- a/ComboBoxAutoComplete.xaml
+++ b/ComboBoxAutoComplete.xaml
@@ -1,53 +1,50 @@
-﻿<UserControl
-	x:Class="SaeediSoftWpfUiControls.ComboBoxAutoComplete"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:local="clr-namespace:SaeediSoftWpfUiControls"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	d:DesignHeight="50"
-	d:DesignWidth="250"
-	Loaded="UserControl_Loaded"
-	mc:Ignorable="d">
-	<UserControl.Resources>
+﻿<UserControl x:Class="SaeediSoftWpfUiControls.ComboBoxAutoComplete"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:local="clr-namespace:SaeediSoftWpfUiControls"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             d:DesignHeight="50"
+             d:DesignWidth="250"
+             Loaded="UserControl_Loaded"
+             mc:Ignorable="d">
+    <UserControl.Resources>
 
-		<Storyboard x:Key="FadeInAnimation">
-			<DoubleAnimation
-				Storyboard.TargetProperty="Opacity"
-				From="0"
-				To="1"
-				Duration="0:0:0.5" />
-		</Storyboard>
-	</UserControl.Resources>
-	<Border
-		x:Name="border"
-		Padding="0"
-		BorderBrush="Black"
-		BorderThickness=".5">
-		<ComboBox
-			x:Name="cmbAutoComplete"
-			MinWidth="200"
-			MinHeight="40"
-			Margin="5"
-			HorizontalAlignment="Left"
-			VerticalAlignment="Top"
-			ContextMenuOpening="cmbAutoComplete_ContextMenuOpening"
-			DisplayMemberPath="{Binding DisplayMemberPath, RelativeSource={RelativeSource AncestorType=UserControl}}"
-			FontSize="{Binding FontSize, RelativeSource={RelativeSource AncestorType=UserControl}}"
-			FontWeight="{Binding FontWeight, RelativeSource={RelativeSource AncestorType=UserControl}}"
-			GotFocus="cmbAutoComplete_GotFocus"
-			IsEditable="True"
-			IsTextSearchCaseSensitive="False"
-			IsTextSearchEnabled="False"
-			ItemsSource="{Binding ItemsSource, RelativeSource={RelativeSource AncestorType=UserControl}}"
-			KeyUp="cmbAutoComplete_KeyUp"
-			Loaded="cmbAutoComplete_Loaded"
-			LostFocus="cmbAutoComplete_LostFocus"
-			PreviewKeyDown="cbox_PreviewKeyDown"
-			PreviewTextInput="cbox_PreviewTextInput"
-			SelectedValuePath="{Binding SelectedValuePath, RelativeSource={RelativeSource AncestorType=UserControl}}">
-			<!--  Adding the Visual State Manager (VSM) for Focus States  -->
-
-		</ComboBox>
-	</Border>
+        <Storyboard x:Key="FadeInAnimation">
+            <DoubleAnimation Storyboard.TargetProperty="Opacity"
+                             From="0"
+                             To="1"
+                             Duration="0:0:0.5" />
+        </Storyboard>
+    </UserControl.Resources>
+    <Border x:Name="border"
+            Padding="0"
+            BorderBrush="Black"
+            BorderThickness=".5">
+        <ComboBox x:Name="cmbAutoComplete"
+                  MinWidth="200"
+                  MinHeight="40"
+                  Margin="6,6,0,0"
+                  HorizontalAlignment="Left"
+                  VerticalAlignment="Top"
+                  ContextMenuOpening="cmbAutoComplete_ContextMenuOpening"
+                  DisplayMemberPath="{Binding DisplayMemberPath, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                  FontSize="{Binding FontSize, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                  FontWeight="{Binding FontWeight, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                  GotFocus="cmbAutoComplete_GotFocus"
+                  IsEditable="True"
+                  IsTextSearchCaseSensitive="False"
+                  IsTextSearchEnabled="False"
+                  ItemsSource="{Binding ItemsSource, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                  KeyUp="cmbAutoComplete_KeyUp"
+                  Loaded="cmbAutoComplete_Loaded"
+                  LostFocus="cmbAutoComplete_LostFocus"
+                  PreviewKeyDown="cbox_PreviewKeyDown"
+                  PreviewTextInput="cbox_PreviewTextInput"
+                  SelectionChanged='cmbAutoComplete_SelectionChanged'
+                  SelectedValuePath="{Binding SelectedValuePath, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                  >
+            <!--  Adding the Visual State Manager (VSM) for Focus States  -->
+        </ComboBox>
+    </Border>
 </UserControl>
